--- a/packages/start-gg/package.json
+++ b/packages/start-gg/package.json
@@ -6,19 +6,25 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "exec": "node -r dotenv/config"
+    "exec": "node -r dotenv/config dist/index.js magic-pixel-weekly > ./out/tournaments.json"
   },
   "dependencies": {
     "@emily-curry/fgc-sync-common": "workspace:*",
     "argparse": "^2.0.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.0.0",
+    "luxon": "^3.3.0",
+    "node-fetch": "^3.3.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
     "@types/argparse": "^2.0.10",
+    "@types/luxon": "^3.3.0",
+    "@types/node": "^18.0.0",
     "dotenv": "^16.0.3"
   }
 }
