--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   extract:
     runs-on: ubuntu-20.04
-    environment:
+    env:
       START_GG_API_KEY: ${{ secrets.START_GG_API_KEY }}
     steps:
       - uses: actions/checkout@v3
