--- a/.github/workflows/sync-auto.yml
+++ b/.github/workflows/sync-auto.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
       - id: step1
         name: Read tournament ids
-        run: echo "TOURNAMENT_IDS=$(cat auto.txt)" >> "$GITHUB_OUTPUT"
+        run: echo "TOURNAMENT_IDS=$(cat auto.txt | tr '\n' ' ')" >> "$GITHUB_OUTPUT"
   sync-auto:
     uses: ./.github/workflows/sync.yml
     needs: read-auto
