--- a/.github/workflows/sync-auto.yml
+++ b/.github/workflows/sync-auto.yml
@@ -1,5 +1,5 @@
-name: auto-sync-start-gg
-run-name: Auto-sync start.gg
+name: auto-sync
+run-name: Auto Sync
 on:
   workflow_dispatch:
   push:
@@ -7,16 +7,18 @@ on:
       - "main"
 
 jobs:
-  read-auto:
+  read-tournament-ids:
+    name: Read Tournament Id list
     runs-on: ubuntu-20.04
     outputs:
       TOURNAMENT_IDS: ${{ steps.step1.outputs.TOURNAMENT_IDS }}
     steps:
       - uses: actions/checkout@v3
       - id: step1
-        name: Read tournament id list
+        name: Output id list
         run: echo "TOURNAMENT_IDS=$(cat auto.txt | tr '\n' ' ')" >> "$GITHUB_OUTPUT"
   sync-auto:
+    name: Sync
     uses: ./.github/workflows/sync.yml
     needs: read-auto
     with:
