fix: standings subquery paging starts at 1

--- a/packages/start-gg/package.json
+++ b/packages/start-gg/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "exec": "node -r dotenv/config dist/index.js magic-pixel-weekly > ./out/tournaments.json"
+    "exec": "node -r dotenv/config dist/index.js magic-pixel-weekly magic-pixel-weekly-1 > ./out/tournaments.json"
   },
   "dependencies": {
     "@emily-curry/fgc-sync-common": "workspace:*",
