feat: website files generate script

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,8 @@
     "strict": true,
     "lib": ["ESNext"],
     "target": "ESNext",
-    "module": "Node16",
+    "module": "CommonJS",
+    "moduleResolution": "node",
     "declaration": true,
     "sourceMap": true,
     "declarationMap": true,
