--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@emily-curry/fgc-sync-start-gg",
+  "name": "@emily-curry/fgc-sync-website",
   "version": "0.0.0",
   "private": true,
   "author": "Emily Curry <emily@curry.sh>",
@@ -9,22 +9,19 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "exec": "node -r dotenv/config dist/index.js magic-pixel-weekly magic-pixel-weekly-1 kansas-k-o > ./out/tournaments.json"
+    "exec": "node dist/index.js --out-dir=./out/ < ../start-gg/out/tournaments.json"
   },
   "dependencies": {
     "@emily-curry/fgc-sync-common": "workspace:*",
     "argparse": "^2.0.1",
-    "graphql": "^16.6.0",
-    "graphql-request": "^6.0.0",
     "luxon": "^3.3.0",
-    "node-fetch": "^2.0.0",
+    "node-fetch": "^3.3.1",
+    "yaml": "^2.3.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/argparse": "^2.0.10",
     "@types/luxon": "^3.3.0",
-    "@types/node": "^18.0.0",
-    "@types/node-fetch": "^2.6.4",
-    "dotenv": "^16.0.3"
+    "@types/node": "^18.0.0"
   }
 }
