ci: testing website files upload

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -82,3 +82,5 @@ jobs:
           name: website-files
           path: content/events
       - run: git diff
+      - run: ls -al content
+      - run: ls -al content/events
