feat: add venue name to sync data

--- a/packages/start-gg/package.json
+++ b/packages/start-gg/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "exec": "node -r dotenv/config dist/index.js magic-pixel-weekly magic-pixel-weekly-1 kansas-k-o > ./out/tournaments.json"
+    "exec": "node -r dotenv/config dist/index.js magic-pixel-weekly-7-25 > ./out/tournaments.json"
   },
   "dependencies": {
     "@emily-curry/fgc-sync-common": "workspace:*",
