--- a/packages/start-gg/package.json
+++ b/packages/start-gg/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "exec": "node -r dotenv/config dist/index.js magic-pixel-weekly-7-25 > ./out/tournaments.json"
+    "exec:t": "node -r dotenv/config dist/index.js tournaments magic-pixel-weekly-10 magic-pixel-weekly-11 > ./out/tournaments.json",
+    "exec:h": "node -r dotenv/config dist/index.js hubs magic-pixel > ./out/hubs.json"
   },
   "dependencies": {
     "@emily-curry/fgc-sync-common": "workspace:*",
