--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "author": "Emily Curry <emily@curry.sh>",
   "license": "MIT",
+  "packageManager": "pnpm@8.3.1",
   "engines": {
     "node": ">=18.0.0"
   },
