--- a/.github/workflows/sync-tournaments.yml
+++ b/.github/workflows/sync-tournaments.yml
@@ -97,5 +97,5 @@ jobs:
         run: |
           git config --global user.name 'KCMP Bot'
           git config --global user.email 'admin@kcmagicpixel.com'
-          git commit -m "chore: automatic sync"
+          git commit -m "chore: automatic sync $(date +%F)"
           git push
