--- a/.github/workflows/sync-auto.yml
+++ b/.github/workflows/sync-auto.yml
@@ -72,4 +72,4 @@ jobs:
     uses: ./.github/workflows/sync-website.yml
     needs: extract-tournaments
     secrets:
-      START_GG_API_KEY: ${{ secrets.START_GG_API_KEY }}
+      KCFGC_DEPLOY_KEY: ${{ secrets.KCFGC_DEPLOY_KEY }}
