--- a/.github/workflows/sync-auto.yml
+++ b/.github/workflows/sync-auto.yml
@@ -77,6 +77,7 @@ jobs:
   workflow-keepalive:
     name: Disable Workflow Inactivity
     if: github.event_name == 'schedule'
+    runs-on: ubuntu-20.04
     permissions:
       actions: write
     steps:
