--- a/.github/workflows/extract-tournaments.yml
+++ b/.github/workflows/extract-tournaments.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   extract:
     name: Extract Tournament Info
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       START_GG_API_KEY: ${{ secrets.START_GG_API_KEY }}
     steps:
