--- a/.github/workflows/sync-auto.yml
+++ b/.github/workflows/sync-auto.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   read-tournament-ids:
     name: Read Tournament Id List
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       TOURNAMENT_IDS: ${{ steps.output.outputs.TOURNAMENT_IDS }}
     steps:
@@ -23,7 +23,7 @@ jobs:
 
   read-hub-ids:
     name: Read Hub Id List
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     outputs:
       HUB_IDS: ${{ steps.output.outputs.HUB_IDS }}
     steps:
@@ -43,7 +43,7 @@ jobs:
 
   read-hub-tournament-ids:
     name: Read Tournament Ids From Hubs
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: extract-hubs
     outputs:
       TOURNAMENT_IDS: ${{ steps.output.outputs.TOURNAMENT_IDS }}
@@ -77,7 +77,7 @@ jobs:
   workflow-keepalive:
     name: Disable Workflow Inactivity
     if: github.event_name == 'schedule'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions:
       actions: write
     steps:
